src/test/deca/context/valid/created/while.deca
{
	while(1>2){
		println("salut");
	}
}