src/test/deca/context/invalid/created/while-mauvais.deca
{
	while(3){
		true;
	}
}